# MonsterFarmer

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp  project.bat
data/base_items/: items.json  template.json
data/base_monsters/: 1.json  monster_0.json  monster_1.json  monster_10.json  monster_11.json  monster_12.json  monster_13.json  monster_14.json  monster_15.json  monster_16.json  monster_17.json  monster_18.json  monster_19.json  monster_2.json  monster_20.json  monster_21.json  monster_22.json  monster_23.json  monster_24.json  monster_25.json  monster_26.json  monster_27.json  monster_28.json  monster_29.json  monster_3.json  monster_30.json  monster_31.json  monster_32.json  monster_33.json  monster_34.json  monster_35.json  monster_36.json  monster_37.json  monster_38.json  monster_39.json  monster_4.json  monster_40.json  monster_41.json  monster_42.json  monster_43.json  (+58 more)
entities/: Monster.cpp  Monster.hpp  Team.cpp  Team.hpp
entities/items/: Item.cpp  Item.hpp
frontend/: TextInterface.cpp  TextInterface.hpp
game/: Game.cpp  Game.hpp
game/entities/items/: Item.cpp  Item.hpp
game/entities/monsters/: Monster.cpp  Monster.hpp  Team.cpp  Team.hpp
game/entities/players/: Player.cpp  Player.hpp
game/scenarios/: Farm.cpp  Farm.hpp  Fight.cpp  Fight.hpp
gameMethods/: Farm.cpp  Farm.hpp  Fight.cpp  Fight.hpp
views/: TextInterface.cpp  TextInterface.hpp
